Bug 1123163 - Hit testing broken on Google Search results page. r=yzen, a=sledru